services/jellyfin/ingress-lan-tls.yaml
# Standalone Ingress split out from helmrelease.yaml.
# Intended to be reached only over private networks (LAN, Tailnet)
#See issue #10
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-lan-tls
  namespace: jellyfin
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.labmatt.com
      secretName: jellyfin-lan-tls
  rules:
    - host: jellyfin.labmatt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
